feat(wal): 实现异步 WAL 写入器和性能基准测试 (#4)
- 添加 AsyncWalWriter 类实现异步写入和批量提交功能
- 实现严格 RingBuffer 机制防止数据覆盖确保数据不丢失
- 添加 Group Commit 机制通过批量 fsync 提升写入性能
- 集成 Checkpoint 管理器支持持久化位置追踪
- 添加 P0 修复解决刷盘序列号追踪和严格阻塞模式问题
- 实现 V0.3 第一性原理性能测试套件验证系统稳定性
- 添加吞吐量、容量、延迟三项核心指标测试功能
- 集成 ShardedWalEngine 和集群配置相关测试代码
- 配置 .gitignore 文件忽略编译产物和临时文件