@@ -7,20 +7,19 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 
 /**
- * Loomq V0.2 压测报告
+ * Loomq V0.3 第一性原理性能测试
  *
- * 验证目标:
- * 1. 创建接口 P95 < 20ms (V0.1: 119ms)
- * 2. 风暴承载 10万稳定 (V0.1: 1万开始退化)
- * 3. 单机容量 200万+ (V0.1: 150万)
+ * 设计原则：
+ * 1. 最小化测量开销 - 只用原子计数器，不用同步集合
+ * 2. JVM预热 - 消除JIT编译影响
+ * 3. 多轮测试 - 取稳定值
+ * 4. 渐进加压 - 找到崩溃点
+ * 5. 分离关注点 - 吞吐量、延迟、容量分开测
  */
 class BenchmarkV2Test {
 
@@ -32,20 +31,11 @@ class BenchmarkV2Test {
     @BeforeEach
     void setUp() throws Exception {
         LoomqConfigV2 config = new LoomqConfigV2(
-                1000,      // 桶粒度 1秒
-                10000,     // 就绪队列 1万
-                0,         // 不限速
-                1000,      // 最大并发 1000
-                50000,     // 分发队列 5万
-                5,         // 最大重试 5
-                1000,      // 重试退避 1秒
-                5000,      // webhook 连接超时
-                30000,     // webhook 读取超时
+                100, 500_000, 0, 50_000, 1_000_000, 10, 5000, 100_000, 600_000,
                 tempDir.resolve("wal").toString(),
-                "batch",
+                "async",
                 LoomqConfigV2.AckLevel.ASYNC
         );
-
         engine = new LoomqEngineV2(config);
         engine.start();
     }
@@ -58,56 +48,134 @@ class BenchmarkV2Test {
     }
 
     @Test
-    void runCreateBenchmark() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║              Loomq V0.2 创建接口压测报告                        ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
+    void runFirstPrinciplesBenchmark() throws Exception {
+        printHeader();
 
-        int[] threadCounts = {10, 50, 100, 200};
-        int requestsPerThread = 500;
+        // 1. 预热 - 让JIT编译完成
+        warmup();
 
-        for (int threads : threadCounts) {
-            runCreateBenchmarkInternal(threads, requestsPerThread);
-            Thread.sleep(1000); // 冷却
-        }
+        // 2. 吞吐量测试 - 找峰值
+        testThroughput();
+
+        // 3. 容量测试 - 找极限
+        testCapacity();
+
+        // 4. 延迟测试 - 找P99爆炸点
+        testLatency();
+
+        printFooter();
     }
 
-    private void runCreateBenchmarkInternal(int threads, int requestsPerThread) throws Exception {
-        int totalRequests = threads * requestsPerThread;
+    // ==================== 预热 ====================
 
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.printf("并发线程: %d | 总请求数: %d%n", threads, totalRequests);
-        System.out.println("────────────────────────────────────────────────────────────────");
+    private void warmup() throws Exception {
+        System.out.println("\n[预热] 50,000 任务...");
+        long start = System.nanoTime();
 
-        // 预热
-        for (int i = 0; i < 50; i++) {
-            createTask(3600000);
-        }
-        Thread.sleep(500);
-
-        // 开始压测
-        List<Long> latencies = Collections.synchronizedList(new ArrayList<>());
-        AtomicInteger successCount = new AtomicInteger(0);
-        AtomicInteger failCount = new AtomicInteger(0);
+        int tasks = 50_000;
+        int threads = 50;
         CountDownLatch latch = new CountDownLatch(threads);
-        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
-
-        long startTime = System.nanoTime();
+        ExecutorService executor = Executors.newFixedThreadPool(threads);
+        AtomicInteger count = new AtomicInteger(0);
 
         for (int t = 0; t < threads; t++) {
             executor.submit(() -> {
                 try {
-                    for (int i = 0; i < requestsPerThread; i++) {
-                        long reqStart = System.nanoTime();
+                    for (int i = 0; i < tasks / threads; i++) {
+                        Task task = Task.builder()
+                                .taskId("warmup-" + count.incrementAndGet())
+                                .bizKey("warmup")
+                                .webhookUrl("http://localhost:9999/webhook")
+                                .triggerTime(System.currentTimeMillis() + 3600000)
+                                .build();
+                        engine.createTask(task);
+                    }
+                } finally {
+                    latch.countDown();
+                }
+            });
+        }
+
+        latch.await(2, TimeUnit.MINUTES);
+        executor.shutdown();
+
+        long ms = (System.nanoTime() - start) / 1_000_000;
+        System.out.printf("[预热] 完成: %d ms, %d QPS\n", ms, tasks * 1000L / ms);
+        Thread.sleep(1000); // 等待WAL刷盘
+    }
+
+    // ==================== 吞吐量测试 ====================
+
+    private void testThroughput() throws Exception {
+        System.out.println("\n════════════════════════════════════════════════════════════════════════════════════");
+        System.out.println("测试1: 吞吐量极限 (找到峰值QPS)");
+        System.out.println("════════════════════════════════════════════════════════════════════════════════════");
+
+        // 测试不同规模，找到峰值
+        int[] scales = {100_000, 200_000, 500_000, 1_000_000, 2_000_000};
+
+        System.out.println("┌──────────────┬──────────────┬──────────────┬──────────────┬──────────────┐");
+        System.out.println("│    任务数    │   耗时(ms)   │     QPS      │   成功率     │     评价     │");
+        System.out.println("├──────────────┼──────────────┼──────────────┼──────────────┼──────────────┤");
+
+        long peakQps = 0;
+        int peakScale = 0;
+
+        for (int scale : scales) {
+            Result r = runThroughputTest(scale);
+            String eval = r.successRate >= 0.9999 ? "✅ 优秀" :
+                          r.successRate >= 0.999 ? "✅ 正常" :
+                          r.successRate >= 0.99 ? "⚠️ 轻微" : "❌ 异常";
+
+            System.out.printf("│ %,12d │ %,12d │ %,12d │ %,11.4f%% │ %12s │\n",
+                    scale, r.durationMs, r.qps, r.successRate * 100, eval);
+
+            if (r.qps > peakQps && r.successRate >= 0.999) {
+                peakQps = r.qps;
+                peakScale = scale;
+            }
+
+            // 如果成功率下降明显，停止
+            if (r.successRate < 0.99) break;
+
+            // 重启引擎清理状态
+            restartEngine("tp-" + scale);
+        }
+
+        System.out.println("└──────────────┴──────────────┴──────────────┴──────────────┴──────────────┘");
+        System.out.printf("\n📊 吞吐量峰值: %,d QPS (%,d 任务)\n", peakQps, peakScale);
+    }
+
+    private Result runThroughputTest(int taskCount) {
+        int threads = Math.min(500, Math.max(100, taskCount / 5000));
+        int tasksPerThread = taskCount / threads;
+
+        AtomicInteger success = new AtomicInteger(0);
+        AtomicInteger fail = new AtomicInteger(0);
+        CountDownLatch latch = new CountDownLatch(threads);
+        ExecutorService executor = Executors.newFixedThreadPool(threads);
+        AtomicLong counter = new AtomicLong(0);
+
+        long start = System.nanoTime();
+
+        for (int t = 0; t < threads; t++) {
+            executor.submit(() -> {
+                try {
+                    for (int i = 0; i < tasksPerThread; i++) {
                         try {
-                            createTask(3600000);
-                            long latency = (System.nanoTime() - reqStart) / 1_000_000;
-                            latencies.add(latency);
-                            successCount.incrementAndGet();
+                            Task task = Task.builder()
+                                    .taskId("tp-" + counter.incrementAndGet())
+                                    .bizKey("throughput")
+                                    .webhookUrl("http://localhost:9999/webhook")
+                                    .triggerTime(System.currentTimeMillis() + 3600000)
+                                    .build();
+                            if (engine.createTask(task).ok()) {
+                                success.incrementAndGet();
+                            } else {
+                                fail.incrementAndGet();
+                            }
                         } catch (Exception e) {
-                            failCount.incrementAndGet();
+                            fail.incrementAndGet();
                         }
                     }
                 } finally {
@@ -116,757 +184,225 @@ class BenchmarkV2Test {
             });
         }
 
-        latch.await();
+        try {
+            latch.await(10, TimeUnit.MINUTES);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
         executor.shutdown();
 
-        long durationMs = (System.nanoTime() - startTime) / 1_000_000;
+        long durationMs = (System.nanoTime() - start) / 1_000_000;
+        int total = threads * tasksPerThread;
+        long qps = durationMs > 0 ? success.get() * 1000L / durationMs : 0;
+        double successRate = total > 0 ? (double) success.get() / total : 0;
 
-        // 统计结果
-        Collections.sort(latencies);
-        double avgLatency = latencies.stream().mapToLong(Long::longValue).average().orElse(0);
-        long p50 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.50));
-        long p90 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.90));
-        long p95 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.95));
-        long p99 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.99));
-        double qps = (double) successCount.get() / durationMs * 1000;
-
-        System.out.println();
-        System.out.printf("总耗时: %d ms%n", durationMs);
-        System.out.printf("成功请求: %d%n", successCount.get());
-        System.out.printf("失败请求: %d%n", failCount.get());
-        System.out.printf("QPS: %.0f%n", qps);
-        System.out.println();
-        System.out.println("延迟统计:");
-        System.out.printf("  平均: %.2f ms%n", avgLatency);
-        System.out.printf("  P50:  %d ms%n", p50);
-        System.out.printf("  P90:  %d ms%n", p90);
-        System.out.printf("  P95:  %d ms%n", p95);
-        System.out.printf("  P99:  %d ms%n", p99);
-        System.out.println();
-
-        // 验收结果
-        boolean passed = p95 <= 20;
-        System.out.printf("验收结果: %s (P95 %s 20ms)%n",
-                passed ? "✅ 通过" : "❌ 未通过",
-                p95 <= 20 ? "≤" : ">");
-        System.out.println();
+        return new Result(success.get(), fail.get(), durationMs, qps, successRate);
     }
 
-    @Test
-    void runStormBenchmark() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║              Loomq V0.2 风暴测试报告                            ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
+    // ==================== 容量测试 ====================
 
-        int[] taskCounts = {1000, 5000, 10000, 50000, 100000};
+    private void testCapacity() throws Exception {
+        System.out.println("\n════════════════════════════════════════════════════════════════════════════════════");
+        System.out.println("测试2: 容量极限 (找到OOM点)");
+        System.out.println("════════════════════════════════════════════════════════════════════════════════════");
 
-        for (int taskCount : taskCounts) {
-            runStormTestInternal(taskCount, 2);
-            Thread.sleep(2000); // 冷却
-        }
-    }
+        int[] scales = {500_000, 1_000_000, 2_000_000, 5_000_000, 10_000_000};
 
-    private void runStormTestInternal(int taskCount, int delaySec) throws Exception {
-        long triggerTime = System.currentTimeMillis() + delaySec * 1000L;
+        System.out.println("┌──────────────┬──────────────┬──────────────┬──────────────┬──────────────┬──────────────┐");
+        System.out.println("│    任务数    │   耗时(ms)   │     QPS      │   内存(MB)   │ 每任务(bytes)│     状态     │");
+        System.out.println("├──────────────┼──────────────┼──────────────┼──────────────┼──────────────┼──────────────┤");
 
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.printf("风暴测试: %,d 任务, %d 秒后同时到期%n", taskCount, delaySec);
-        System.out.println("────────────────────────────────────────────────────────────────");
+        long maxStable = 0;
 
-        // 预热
-        for (int i = 0; i < 20; i++) {
-            createTask(60000);
-        }
-        Thread.sleep(200);
+        for (int scale : scales) {
+            long beforeMem = Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory();
 
-        // 创建任务
-        AtomicInteger successCount = new AtomicInteger(0);
-        AtomicInteger failCount = new AtomicInteger(0);
-        List<Long> latencies = Collections.synchronizedList(new ArrayList<>());
-        CountDownLatch latch = new CountDownLatch(taskCount);
-        Semaphore rateLimiter = new Semaphore(500);
+            Result r = runThroughputTest(scale);
+            boolean oom = false;
 
-        long createStartTime = System.currentTimeMillis();
+            try {
+                long afterMem = Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory();
+                long usedMem = afterMem - beforeMem;
+                long bytesPerTask = r.success > 0 ? usedMem / r.success : 0;
+                long memMB = usedMem / 1024 / 1024;
 
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            for (int i = 0; i < taskCount; i++) {
-                rateLimiter.acquire();
-                final int idx = i;
-                executor.submit(() -> {
-                    try {
-                        long start = System.currentTimeMillis();
-                        Task task = Task.builder()
-                                .taskId("storm-" + idx + "-" + System.nanoTime())
-                                .bizKey("storm-biz-" + idx)
-                                .webhookUrl("http://localhost:9999/webhook")
-                                .triggerTime(triggerTime)
-                                .build();
+                String status = r.successRate >= 0.999 ? "✅ 正常" :
+                                r.successRate >= 0.99 ? "⚠️ 退化" :
+                                r.successRate >= 0.90 ? "⚠️ 严重" : "❌ 极限";
 
-                        var result = engine.createTask(task);
-                        long latency = System.currentTimeMillis() - start;
+                System.out.printf("│ %,12d │ %,12d │ %,12d │ %,12d │ %,12d │ %12s │\n",
+                        scale, r.durationMs, r.qps, memMB, bytesPerTask, status);
 
-                        if (result.ok()) {
-                            successCount.incrementAndGet();
-                            latencies.add(latency);
-                        } else {
-                            failCount.incrementAndGet();
-                        }
-                    } catch (Exception e) {
-                        failCount.incrementAndGet();
-                    } finally {
-                        rateLimiter.release();
-                        latch.countDown();
-                    }
-                });
+                if (r.successRate >= 0.99) {
+                    maxStable = scale;
+                }
+            } catch (OutOfMemoryError e) {
+                oom = true;
+                System.out.printf("│ %,12d │         OOM │            │            │            │     ❌ OOM    │\n", scale);
             }
 
-            latch.await(5, TimeUnit.MINUTES);
+            if (oom || r.successRate < 0.90) break;
+
+            restartEngine("cap-" + scale);
         }
 
-        long createEndTime = System.currentTimeMillis();
-
-        // 统计创建性能
-        long createDuration = createEndTime - createStartTime;
-        double createQps = (double) successCount.get() / (createDuration / 1000.0);
-
-        Collections.sort(latencies);
-        double avgLatency = latencies.stream().mapToLong(Long::longValue).average().orElse(0);
-        long p50 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.50));
-        long p90 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.90));
-        long p95 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.95));
-        long p99 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.99));
-
-        System.out.println();
-        System.out.println("========== 创建结果 ==========");
-        System.out.printf("创建成功: %,d / %,d%n", successCount.get(), taskCount);
-        System.out.printf("创建失败: %,d%n", failCount.get());
-        System.out.printf("创建耗时: %d ms%n", createDuration);
-        System.out.printf("创建 QPS: %.0f%n", createQps);
-        System.out.println();
-        System.out.println("延迟统计:");
-        System.out.printf("  平均: %.2f ms%n", avgLatency);
-        System.out.printf("  P50:  %d ms%n", p50);
-        System.out.printf("  P90:  %d ms%n", p90);
-        System.out.printf("  P95:  %d ms%n", p95);
-        System.out.printf("  P99:  %d ms%n", p99);
-
-        // 系统状态
-        var stats = engine.getStats();
-        System.out.println();
-        System.out.println("========== 系统状态 ==========");
-        System.out.printf("时间桶数量: %d (聚合效果)%n", stats.scheduler().bucketCount());
-        System.out.printf("就绪队列大小: %d%n", stats.scheduler().readyQueueSize());
-        System.out.printf("WAL 事件数: %,d%n", stats.wal().totalEvents());
-        System.out.printf("WAL 批次数: %,d%n", stats.wal().totalBatches());
-        System.out.printf("WAL fsync 数: %,d%n", stats.wal().totalFsyncs());
-
-        // 计算聚合效率
-        double aggregationRate = stats.scheduler().bucketCount() > 0
-                ? (double) successCount.get() / stats.scheduler().bucketCount()
-                : 0;
-        System.out.printf("时间桶聚合率: %.0f 任务/桶%n", aggregationRate);
-
-        // 计算 Group Commit 效率
-        double groupCommitRate = stats.wal().totalBatches() > 0
-                ? (double) stats.wal().totalEvents() / stats.wal().totalBatches()
-                : 0;
-        System.out.printf("Group Commit 效率: %.0f 事件/批次%n", groupCommitRate);
-
-        // 验收结果
-        boolean p95Passed = p95 <= 20;
-        boolean stormPassed = successCount.get() == taskCount;
-
-        System.out.println();
-        System.out.println("========== 验收结果 ==========");
-        System.out.printf("P95 延迟: %s (%d ms %s 20ms)%n",
-                p95Passed ? "✅ 通过" : "❌ 未通过", p95, p95 <= 20 ? "≤" : ">");
-        System.out.printf("风暴承载: %s (成功率 %.2f%%)%n",
-                stormPassed ? "✅ 通过" : "⚠️ 警告",
-                100.0 * successCount.get() / taskCount);
-        System.out.println();
+        System.out.println("└──────────────┴──────────────┴──────────────┴──────────────┴──────────────┴──────────────┘");
+        System.out.printf("\n📊 稳定容量: %,d 任务\n", maxStable);
     }
 
-    @Test
-    void runMemoryBenchmark() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║              Loomq V0.2 内存极限测试报告                        ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
+    // ==================== 延迟测试 ====================
 
-        int[] taskCounts = {10000, 50000, 100000, 200000};
+    private void testLatency() throws Exception {
+        System.out.println("\n════════════════════════════════════════════════════════════════════════════════════");
+        System.out.println("测试3: 延迟分布 (找到P99爆炸点)");
+        System.out.println("════════════════════════════════════════════════════════════════════════════════════");
 
-        for (int count : taskCounts) {
-            runMemoryTestInternal(count);
-            Thread.sleep(3000); // 冷却
+        // 使用采样方式测量延迟，避免同步开销影响主路径
+        int[] concurrencies = {100, 200, 500, 1000, 2000, 5000};
+        int samples = 10_000; // 采样数量
 
-            // 重启引擎清理状态
-            engine.stop();
-            LoomqConfigV2 config = new LoomqConfigV2(
-                    1000, 10000, 0, 1000, 50000, 5, 1000, 5000, 30000,
-                    tempDir.resolve("wal-" + count).toString(), "batch",
-                    LoomqConfigV2.AckLevel.ASYNC
-            );
-            engine = new LoomqEngineV2(config);
-            engine.start();
+        System.out.println("┌────────────┬──────────────┬──────────────┬──────────────┬──────────────┬──────────────┐");
+        System.out.println("│  并发数    │     QPS      │   P50(ms)    │   P95(ms)    │   P99(ms)    │     状态     │");
+        System.out.println("├────────────┼──────────────┼──────────────┼──────────────┼──────────────┼──────────────┤");
+
+        for (int concurrency : concurrencies) {
+            LatencyResult r = runLatencyTest(concurrency, samples);
+
+            String status = r.p99 <= 10 ? "✅ 优秀" :
+                            r.p99 <= 50 ? "✅ 正常" :
+                            r.p99 <= 100 ? "⚠️ 上升" :
+                            r.p99 <= 500 ? "⚠️ 明显" : "❌ 爆炸";
+
+            System.out.printf("│ %,10d │ %,12d │ %,12.1f │ %,12.1f │ %,12.1f │ %12s │\n",
+                    concurrency, r.qps, r.p50, r.p95, r.p99, status);
+
+            if (r.p99 > 500) break;
+
+            restartEngine("lat-" + concurrency);
         }
+
+        System.out.println("└────────────┴──────────────┴──────────────┴──────────────┴──────────────┴──────────────┘");
     }
 
-    private void runMemoryTestInternal(int targetTasks) throws Exception {
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.printf("内存极限测试: 目标 %,d 任务%n", targetTasks);
-        System.out.println("────────────────────────────────────────────────────────────────");
+    private LatencyResult runLatencyTest(int concurrency, int samples) {
+        // 使用 LongAdder 统计，无锁
+        int tasksPerThread = samples / concurrency;
 
-        AtomicInteger totalCreated = new AtomicInteger(0);
-        AtomicInteger totalFailed = new AtomicInteger(0);
-        List<Long> latencies = Collections.synchronizedList(new ArrayList<>());
+        // 延迟采样：只采样部分请求，减少开销
+        int sampleInterval = Math.max(1, tasksPerThread / 100); // 每100个采样1个
+        long[] latencies = new long[samples / sampleInterval];
+        int[] latencyIndex = {0};
 
-        int batchSize = 1000;
-        int threads = 50;
-        ExecutorService executor = Executors.newFixedThreadPool(threads);
+        AtomicInteger success = new AtomicInteger(0);
+        CountDownLatch latch = new CountDownLatch(concurrency);
+        ExecutorService executor = Executors.newFixedThreadPool(concurrency);
+        AtomicLong counter = new AtomicLong(0);
 
-        long startTime = System.currentTimeMillis();
-        long lastReportTime = startTime;
+        long start = System.nanoTime();
 
-        for (int batch = 0; batch < targetTasks / batchSize; batch++) {
-            CountDownLatch latch = new CountDownLatch(batchSize);
+        for (int t = 0; t < concurrency; t++) {
+            final int threadId = t;
+            executor.submit(() -> {
+                try {
+                    for (int i = 0; i < tasksPerThread; i++) {
+                        long reqStart = System.nanoTime();
 
-            for (int i = 0; i < batchSize; i++) {
-                final int idx = batch * batchSize + i;
-                executor.submit(() -> {
-                    try {
-                        long reqStart = System.currentTimeMillis();
                         Task task = Task.builder()
-                                .taskId("mem-" + idx)
-                                .bizKey("mem-biz-" + idx)
+                                .taskId("lat-" + counter.incrementAndGet())
+                                .bizKey("latency")
                                 .webhookUrl("http://localhost:9999/webhook")
                                 .triggerTime(System.currentTimeMillis() + 3600000)
                                 .build();
 
-                        var result = engine.createTask(task);
-                        long latency = System.currentTimeMillis() - reqStart;
+                        if (engine.createTask(task).ok()) {
+                            success.incrementAndGet();
 
-                        if (result.ok()) {
-                            totalCreated.incrementAndGet();
-                            latencies.add(latency);
-                        } else {
-                            totalFailed.incrementAndGet();
+                            // 采样延迟
+                            if (i % sampleInterval == 0) {
+                                long latency = System.nanoTime() - reqStart;
+                                int idx;
+                                synchronized (latencies) {
+                                    idx = latencyIndex[0]++;
+                                    if (idx < latencies.length) {
+                                        latencies[idx] = latency / 1_000_000; // ms
+                                    }
+                                }
+                            }
                         }
-                    } catch (Exception e) {
-                        totalFailed.incrementAndGet();
-                    } finally {
-                        latch.countDown();
                     }
-                });
-            }
-
-            latch.await();
-
-            // 每 5 万报告一次
-            if (totalCreated.get() % 50000 == 0 || totalCreated.get() == targetTasks) {
-                long elapsed = System.currentTimeMillis() - startTime;
-                double qps = (double) totalCreated.get() / (elapsed / 1000.0);
-
-                List<Long> recentLatencies = new ArrayList<>(latencies);
-                Collections.sort(recentLatencies);
-                long p95 = recentLatencies.isEmpty() ? 0 :
-                        recentLatencies.get((int) (recentLatencies.size() * 0.95));
-
-                // 内存信息
-                Runtime runtime = Runtime.getRuntime();
-                long usedMemory = (runtime.totalMemory() - runtime.freeMemory()) / 1024 / 1024;
-
-                System.out.printf("已创建: %,d | QPS: %.0f | P95: %d ms | 内存: %d MB | 失败: %d%n",
-                        totalCreated.get(), qps, p95, usedMemory, totalFailed.get());
-
-                lastReportTime = System.currentTimeMillis();
-            }
+                } finally {
+                    latch.countDown();
+                }
+            });
         }
 
+        try {
+            latch.await(10, TimeUnit.MINUTES);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
         executor.shutdown();
 
-        long endTime = System.currentTimeMillis();
-        double totalQps = (double) totalCreated.get() / ((endTime - startTime) / 1000.0);
+        long durationMs = (System.nanoTime() - start) / 1_000_000;
+        long qps = durationMs > 0 ? success.get() * 1000L / durationMs : 0;
 
-        Collections.sort(latencies);
-        long p50 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.50));
-        long p95 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.95));
-        long p99 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.99));
-
-        System.out.println();
-        System.out.println("========== 最终结果 ==========");
-        System.out.printf("总创建: %,d%n", totalCreated.get());
-        System.out.printf("总失败: %,d%n", totalFailed.get());
-        System.out.printf("总耗时: %.1f 秒%n", (endTime - startTime) / 1000.0);
-        System.out.printf("平均 QPS: %.0f%n", totalQps);
-        System.out.println();
-        System.out.println("延迟统计:");
-        System.out.printf("  P50: %d ms%n", p50);
-        System.out.printf("  P95: %d ms%n", p95);
-        System.out.printf("  P99: %d ms%n", p99);
-
-        // 内存信息
-        Runtime runtime = Runtime.getRuntime();
-        long usedMemory = (runtime.totalMemory() - runtime.freeMemory()) / 1024 / 1024;
-        long maxMemory = runtime.maxMemory() / 1024 / 1024;
-
-        System.out.println();
-        System.out.println("内存统计:");
-        System.out.printf("  已使用: %d MB%n", usedMemory);
-        System.out.printf("  最大可用: %d MB%n", maxMemory);
-        System.out.printf("  每任务内存: %.2f bytes%n",
-                (double) usedMemory * 1024 * 1024 / totalCreated.get());
-
-        // 验收
-        boolean passed = totalCreated.get() >= targetTasks * 0.99 && p95 <= 50;
-        System.out.println();
-        System.out.printf("验收结果: %s%n",
-                passed ? "✅ 通过" : "❌ 未通过");
-        System.out.println();
-    }
-
-    @Test
-    void runFullReport() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════════════╗");
-        System.out.println("║                     Loomq V0.2 完整性能测试报告                        ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════════════╝");
-        System.out.println();
-
-        // 1. 创建接口压测
-        System.out.println("┌────────────────────────────────────────────────────────────────────────┐");
-        System.out.println("│ 1. 创建接口压测                                                        │");
-        System.out.println("└────────────────────────────────────────────────────────────────────────┘");
-        runCreateBenchmarkInternal(100, 500);
-
-        // 2. 风暴测试
-        System.out.println("┌────────────────────────────────────────────────────────────────────────┐");
-        System.out.println("│ 2. 风暴测试 (10万任务同时到期)                                          │");
-        System.out.println("└────────────────────────────────────────────────────────────────────────┘");
-        runStormTestInternal(100000, 3);
-
-        // 3. 对比总结
-        System.out.println();
-        System.out.println("════════════════════════════════════════════════════════════════════════");
-        System.out.println("                           V0.1 vs V0.2 对比                            ");
-        System.out.println("════════════════════════════════════════════════════════════════════════");
-        System.out.println();
-        System.out.println("┌──────────────────┬────────────────┬────────────────┬────────────────┐");
-        System.out.println("│      指标        │     V0.1       │     V0.2       │     提升       │");
-        System.out.println("├──────────────────┼────────────────┼────────────────┼────────────────┤");
-        System.out.println("│ 创建 P95 (高并发)│    119 ms      │    < 20 ms     │     6x+        │");
-        System.out.println("│ 风暴承载         │   1万开始退化  │   10万稳定     │     10x        │");
-        System.out.println("│ WAL 写入         │   同步+全局锁  │   异步+Group   │   消除阻塞     │");
-        System.out.println("│ 调度方式         │   Thread.sleep │   时间桶聚合   │   批量优化     │");
-        System.out.println("│ 执行控制         │   无限流       │   Semaphore    │   保护下游     │");
-        System.out.println("└──────────────────┴────────────────┴────────────────┴────────────────┘");
-        System.out.println();
-
-        // 4. 核心创新点
-        System.out.println("════════════════════════════════════════════════════════════════════════");
-        System.out.println("                           V0.2 核心创新点                              ");
-        System.out.println("════════════════════════════════════════════════════════════════════════");
-        System.out.println();
-        System.out.println("1. 时间桶调度器 (TimeBucketScheduler)");
-        System.out.println("   - 将任务按时间聚合到桶中");
-        System.out.println("   - 批量唤醒避免唤醒风暴");
-        System.out.println("   - 支持 10万+ 任务同时到期稳定运行");
-        System.out.println();
-        System.out.println("2. 异步 WAL 写入器 (AsyncWalWriter)");
-        System.out.println("   - RingBuffer 无锁发布");
-        System.out.println("   - Group Commit: 多条记录一次 fsync");
-        System.out.println("   - IO 与业务线程完全解耦");
-        System.out.println();
-        System.out.println("3. 执行层限流器 (DispatchLimiter)");
-        System.out.println("   - Semaphore 控制最大并发");
-        System.out.println("   - 有界队列防止内存溢出");
-        System.out.println("   - 保护下游服务不被打垮");
-        System.out.println();
-        System.out.println("4. 完整状态机 (TaskLifecycle)");
-        System.out.println("   - 所有状态转换通过 CAS 操作");
-        System.out.println("   - 无效转换被拒绝");
-        System.out.println("   - 状态一致性保证");
-        System.out.println();
-    }
-
-    @Test
-    void runTimeBucketAggregationTest() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║          V0.2 特有测试: 时间桶聚合效率                          ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
-
-        int[] taskCounts = {1000, 5000, 10000, 50000};
-
-        for (int count : taskCounts) {
-            runTimeBucketTestInternal(count);
-            Thread.sleep(1000);
-
-            // 重启引擎清理
-            engine.stop();
-            LoomqConfigV2 config = new LoomqConfigV2(
-                    1000, 10000, 0, 1000, 50000, 5, 1000, 5000, 30000,
-                    tempDir.resolve("wal-tb-" + count).toString(), "batch",
-                    LoomqConfigV2.AckLevel.ASYNC
-            );
-            engine = new LoomqEngineV2(config);
-            engine.start();
-        }
-    }
-
-    @Test
-    void runBucketSortTest() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║          V0.2 特有测试: 桶内二级排序                            ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
-
-        // 测试：同一秒内，不同毫秒的任务排序
-        System.out.println("测试场景: 1000 任务在同一秒，但不同毫秒");
-        System.out.println();
-
-        int taskCount = 1000;
-        long baseTime = System.currentTimeMillis() + 2000;
-        long bucketTime = (baseTime / 1000) * 1000;  // 秒级对齐
-
-        // 创建任务，分布在同一秒的不同毫秒
-        List<Long> triggerTimes = new ArrayList<>();
-        for (int i = 0; i < taskCount; i++) {
-            // 在桶内的不同毫秒
-            long ms = i % 1000;
-            triggerTimes.add(bucketTime + ms);
+        // 计算延迟百分位
+        int validSamples = Math.min(latencyIndex[0], latencies.length);
+        if (validSamples == 0) {
+            return new LatencyResult(qps, 0, 0, 0);
         }
 
-        // 随机打乱顺序创建
-        Collections.shuffle(triggerTimes);
+        java.util.Arrays.sort(latencies, 0, validSamples);
+        double p50 = latencies[(int)(validSamples * 0.50)];
+        double p95 = latencies[(int)(validSamples * 0.95)];
+        double p99 = latencies[(int)(validSamples * 0.99)];
 
-        AtomicInteger successCount = new AtomicInteger(0);
-        for (int i = 0; i < taskCount; i++) {
-            Task task = Task.builder()
-                    .taskId("sort-" + i)
-                    .bizKey("sort-biz-" + i)
-                    .webhookUrl("http://localhost:9999/webhook")
-                    .triggerTime(triggerTimes.get(i))
-                    .build();
-
-            var result = engine.createTask(task);
-            if (result.ok()) {
-                successCount.incrementAndGet();
-            }
-        }
-
-        var stats = engine.getStats();
-
-        System.out.println("========== 桶内排序结果 ==========");
-        System.out.printf("创建成功: %d / %d%n", successCount.get(), taskCount);
-        System.out.printf("时间桶数量: %d (应该为 1)%n", stats.scheduler().bucketCount());
-        System.out.println();
-        System.out.println("说明:");
-        System.out.println("  - 1000 任务分布在同一秒的不同毫秒");
-        System.out.println("  - 桶内使用优先队列按 triggerTime 排序");
-        System.out.println("  - 分发时按时间顺序逐个取出");
-        System.out.println("  - 避免执行风暴，保护下游服务");
-        System.out.println();
-
-        // 验证桶数量
-        boolean bucketOk = stats.scheduler().bucketCount() == 1;
-        System.out.printf("桶聚合验证: %s%n", bucketOk ? "✅ 通过" : "❌ 未通过");
+        return new LatencyResult(qps, p50, p95, p99);
     }
 
-    private void runTimeBucketTestInternal(int taskCount) throws Exception {
-        // 所有任务设置为同一秒到期
-        long triggerTime = System.currentTimeMillis() + 5000;
+    // ==================== 辅助方法 ====================
 
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.printf("任务数: %,d | 触发时间: 同一秒%n", taskCount);
-        System.out.println("────────────────────────────────────────────────────────────────");
+    private void restartEngine(String suffix) throws Exception {
+        engine.stop();
+        Thread.sleep(1000);
 
-        AtomicInteger successCount = new AtomicInteger(0);
-        CountDownLatch latch = new CountDownLatch(taskCount);
-
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            for (int i = 0; i < taskCount; i++) {
-                final int idx = i;
-                executor.submit(() -> {
-                    try {
-                        Task task = Task.builder()
-                                .taskId("bucket-" + idx)
-                                .bizKey("bucket-biz-" + idx)
-                                .webhookUrl("http://localhost:9999/webhook")
-                                .triggerTime(triggerTime)
-                                .build();
-
-                        var result = engine.createTask(task);
-                        if (result.ok()) {
-                            successCount.incrementAndGet();
-                        }
-                    } finally {
-                        latch.countDown();
-                    }
-                });
-            }
-            latch.await();
-        }
-
-        var stats = engine.getStats();
-        int bucketCount = stats.scheduler().bucketCount();
-
-        System.out.println();
-        System.out.println("========== 聚合效果 ==========");
-        System.out.printf("任务总数: %,d%n", successCount.get());
-        System.out.printf("时间桶数: %d%n", bucketCount);
-        System.out.printf("聚合率: %.0f 任务/桶%n", (double) successCount.get() / bucketCount);
-        System.out.printf("理论唤醒次数 (V0.1): %,d 次%n", successCount.get());
-        System.out.printf("实际唤醒次数 (V0.2): %d 次%n", bucketCount);
-        System.out.printf("唤醒次数减少: %.1f%%)%n",
-                100.0 * (successCount.get() - bucketCount) / successCount.get());
-
-        System.out.println();
-        System.out.println("========== 对比 V0.1 ==========");
-        System.out.println("V0.1: 每个任务独立 Thread.sleep()，唤醒风暴");
-        System.out.printf("V0.2: %d 个任务聚合到 %d 个桶，批量唤醒%n",
-                successCount.get(), bucketCount);
-        System.out.println();
-    }
-
-    @Test
-    void runGroupCommitTest() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║          V0.2 特有测试: Group Commit 效率                       ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
-
-        int[] eventCounts = {100, 500, 1000, 5000, 10000};
-
-        for (int count : eventCounts) {
-            runGroupCommitTestInternal(count);
-            Thread.sleep(1000);
-
-            // 重启引擎清理
-            engine.stop();
-            LoomqConfigV2 config = new LoomqConfigV2(
-                    1000, 10000, 0, 1000, 50000, 5, 1000, 5000, 30000,
-                    tempDir.resolve("wal-gc-" + count).toString(), "batch",
-                    LoomqConfigV2.AckLevel.ASYNC
-            );
-            engine = new LoomqEngineV2(config);
-            engine.start();
-        }
-    }
-
-    private void runGroupCommitTestInternal(int eventCount) throws Exception {
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.printf("事件数: %,d%n", eventCount);
-        System.out.println("────────────────────────────────────────────────────────────────");
-
-        long startTime = System.currentTimeMillis();
-
-        for (int i = 0; i < eventCount; i++) {
-            Task task = Task.builder()
-                    .taskId("gc-" + i)
-                    .bizKey("gc-biz-" + i)
-                    .webhookUrl("http://localhost:9999/webhook")
-                    .triggerTime(System.currentTimeMillis() + 3600000)
-                    .build();
-
-            engine.createTask(task);
-        }
-
-        // 等待 WAL 消费完成
-        Thread.sleep(500);
-
-        long duration = System.currentTimeMillis() - startTime;
-        var stats = engine.getStats().wal();
-
-        System.out.println();
-        System.out.println("========== Group Commit 效果 ==========");
-        System.out.printf("总事件数: %,d%n", stats.totalEvents());
-        System.out.printf("批次数: %,d%n", stats.totalBatches());
-        System.out.printf("fsync 次数: %,d%n", stats.totalFsyncs());
-        System.out.printf("每批次事件数: %.1f%n",
-                (double) stats.totalEvents() / stats.totalBatches());
-        System.out.printf("总耗时: %d ms%n", duration);
-        System.out.printf("吞吐量: %.0f events/s%n",
-                (double) stats.totalEvents() / duration * 1000);
-
-        System.out.println();
-        System.out.println("========== 对比 V0.1 ==========");
-        System.out.printf("V0.1: 每条记录一次 fsync = %d 次 fsync%n", eventCount);
-        System.out.printf("V0.2: Group Commit = %d 次 fsync%n", stats.totalFsyncs());
-        System.out.printf("IO 次数减少: %.1f%%)%n",
-                100.0 * (eventCount - stats.totalFsyncs()) / eventCount);
-        System.out.println();
-    }
-
-    @Test
-    void runBackpressureTest() throws Exception {
-        System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║          V0.2 特有测试: WAL 背压机制                            ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
-        System.out.println();
-
-        // 使用小缓冲区测试背压
         LoomqConfigV2 config = new LoomqConfigV2(
-                1000, 10000, 0, 1000, 50000, 5, 1000, 5000, 30000,
-                tempDir.resolve("wal-bp").toString(), "batch",
+                100, 500_000, 0, 50_000, 1_000_000, 10, 5000, 100_000, 600_000,
+                tempDir.resolve("wal-" + suffix).toString(),
+                "async",
                 LoomqConfigV2.AckLevel.ASYNC
         );
-
-        engine.stop();
         engine = new LoomqEngineV2(config);
         engine.start();
-
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.println("快速写入 50000 事件，测试背压机制");
-        System.out.println("────────────────────────────────────────────────────────────────");
-
-        AtomicInteger successCount = new AtomicInteger(0);
-        AtomicInteger backpressuredCount = new AtomicInteger(0);
-        List<Long> latencies = Collections.synchronizedList(new ArrayList<>());
-
-        long startTime = System.currentTimeMillis();
-
-        for (int i = 0; i < 50000; i++) {
-            long reqStart = System.currentTimeMillis();
-
-            Task task = Task.builder()
-                    .taskId("bp-" + i)
-                    .bizKey("bp-biz-" + i)
-                    .webhookUrl("http://localhost:9999/webhook")
-                    .triggerTime(System.currentTimeMillis() + 3600000)
-                    .build();
-
-            var result = engine.createTask(task);
-            long latency = System.currentTimeMillis() - reqStart;
-
-            if (result.ok()) {
-                successCount.incrementAndGet();
-                latencies.add(latency);
-                if (latency > 10) {
-                    backpressuredCount.incrementAndGet();
-                }
-            }
-        }
-
-        long duration = System.currentTimeMillis() - startTime;
-        var stats = engine.getStats().wal();
-
-        Collections.sort(latencies);
-        long p50 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.50));
-        long p95 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.95));
-        long p99 = latencies.isEmpty() ? 0 : latencies.get((int) (latencies.size() * 0.99));
-
-        System.out.println();
-        System.out.println("========== 背压测试结果 ==========");
-        System.out.printf("成功创建: %,d%n", successCount.get());
-        System.out.printf("总耗时: %d ms%n", duration);
-        System.out.printf("吞吐量: %.0f events/s%n", (double) successCount.get() / duration * 1000);
-        System.out.println();
-        System.out.println("延迟统计:");
-        System.out.printf("  P50: %d ms%n", p50);
-        System.out.printf("  P95: %d ms%n", p95);
-        System.out.printf("  P99: %d ms%n", p99);
-        System.out.printf("  背压影响次数 (>10ms): %d (%.1f%%)%n",
-                backpressuredCount.get(),
-                100.0 * backpressuredCount.get() / successCount.get());
-
-        System.out.println();
-        System.out.println("========== WAL 状态 ==========");
-        System.out.printf("待处理事件: %d%n", stats.ringBufferSize());
-        System.out.printf("缓冲区使用率: %.1f%%%n",
-                100.0 * stats.ringBufferSize() / stats.ringBufferCapacity());
-
-        System.out.println();
-        System.out.println("========== 结论 ==========");
-        System.out.println("背压机制正常工作：");
-        System.out.printf("- %d 次写入触发背压等待%n", backpressuredCount.get());
-        System.out.println("- 系统未崩溃，所有请求成功");
-        System.out.println("- 延迟在可接受范围内");
-        System.out.println();
     }
 
-    @Test
-    void runDispatchLimiterTest() throws Exception {
+    private void printHeader() {
         System.out.println();
-        System.out.println("╔════════════════════════════════════════════════════════════════╗");
-        System.out.println("║          V0.2 特有测试: 执行层限流效果                          ║");
-        System.out.println("╚════════════════════════════════════════════════════════════════╝");
+        System.out.println("╔════════════════════════════════════════════════════════════════════════════════════════════════════════════╗");
+        System.out.println("║                     Loomq V0.3 第一性原理性能测试                                                        ║");
+        System.out.println("╚════════════════════════════════════════════════════════════════════════════════════════════════════════════╝");
         System.out.println();
 
-        // 使用小队列和小并发测试限流
-        LoomqConfigV2 config = new LoomqConfigV2(
-                1000,      // 桶粒度
-                100,       // 就绪队列 100
-                0,         // 不限速
-                50,        // 最大并发 50
-                200,       // 分发队列 200
-                3, 1000, 5000, 30000,
-                tempDir.resolve("wal-dl").toString(), "batch",
-                LoomqConfigV2.AckLevel.ASYNC
-        );
-
-        engine.stop();
-        engine = new LoomqEngineV2(config);
-        engine.start();
-
-        System.out.println("────────────────────────────────────────────────────────────────");
-        System.out.println("限流配置: 最大并发=50, 分发队列=200");
-        System.out.println("测试: 1000 任务同时到期");
-        System.out.println("────────────────────────────────────────────────────────────────");
-
-        int taskCount = 1000;
-        long triggerTime = System.currentTimeMillis() + 1000;
-
-        for (int i = 0; i < taskCount; i++) {
-            Task task = Task.builder()
-                    .taskId("dl-" + i)
-                    .bizKey("dl-biz-" + i)
-                    .webhookUrl("http://localhost:9999/webhook")
-                    .triggerTime(triggerTime)
-                    .build();
-
-            engine.createTask(task);
-        }
-
-        // 等待触发和处理
-        Thread.sleep(5000);
-
-        var stats = engine.getStats().dispatcher();
-
+        Runtime r = Runtime.getRuntime();
+        System.out.println("测试环境:");
+        System.out.printf("  CPU 核心: %d%n", r.availableProcessors());
+        System.out.printf("  最大内存: %d MB%n", r.maxMemory() / 1024 / 1024);
+        System.out.printf("  Java 版本: %s%n", System.getProperty("java.version"));
         System.out.println();
-        System.out.println("========== 限流效果 ==========");
-        System.out.printf("最大并发限制: 50%n");
-        System.out.printf("分发队列容量: 200%n");
-        System.out.println();
-        System.out.printf("提交数: %,d%n", stats.totalSubmitted());
-        System.out.printf("执行数: %,d%n", stats.totalExecuted());
-        System.out.printf("拒绝数: %,d%n", stats.totalRejected());
-        System.out.printf("当前队列大小: %d%n", stats.queueSize());
-        System.out.printf("当前可用许可: %d%n", stats.availablePermits());
-
-        System.out.println();
-        System.out.println("========== 结论 ==========");
-        System.out.println("限流器正常工作：");
-        System.out.printf("- 并发被限制在 %d 以内%n", stats.maxConcurrency());
-        System.out.println("- 队列满时请求被拒绝（背压）");
-        System.out.println("- 保护下游服务不被打垮");
-        System.out.println();
+        System.out.println("测试原则:");
+        System.out.println("  1. 最小化测量开销 - 只用原子计数器");
+        System.out.println("  2. JVM预热 - 消除JIT编译影响");
+        System.out.println("  3. 渐进加压 - 找到崩溃点");
+        System.out.println("  4. 采样延迟 - 减少同步开销");
     }
 
-    private void createTask(long delayMs) {
-        Task task = Task.builder()
-                .taskId("bench-" + System.nanoTime())
-                .bizKey("bench-biz")
-                .webhookUrl("http://localhost:9999/webhook")
-                .triggerTime(System.currentTimeMillis() + delayMs)
-                .build();
-
-        engine.createTask(task);
+    private void printFooter() {
+        System.out.println();
+        System.out.println("════════════════════════════════════════════════════════════════════════════════════");
+        System.out.println("测试完成");
+        System.out.println("════════════════════════════════════════════════════════════════════════════════════");
     }
+
+    record Result(long success, long fail, long durationMs, long qps, double successRate) {}
+    record LatencyResult(long qps, double p50, double p95, double p99) {}
 }
